--- a/petrocarga/package.json
+++ b/petrocarga/package.json
@@ -16,11 +16,13 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "jose": "^6.1.0",
     "lucide-react": "^0.544.0",
     "mapbox-gl": "^3.15.0",
     "next": "15.5.4",
     "react": "19.1.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "react-map-gl": "^8.0.4",
     "tailwind-merge": "^3.3.1"
