--- a/petrocarga/package.json
+++ b/petrocarga/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fullcalendar/daygrid": "^6.1.19",
     "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/react": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
     "@mapbox/mapbox-gl-geocoder": "^5.1.2",
     "@radix-ui/react-checkbox": "^1.3.3",
