--- a/petrocarga/package.json
+++ b/petrocarga/package.json
@@ -15,10 +15,11 @@
     "@fullcalendar/timegrid": "^6.1.19",
     "@mapbox/mapbox-gl-geocoder": "^5.1.2",
     "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-slot": "^1.2.4",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
