--- a/petrocarga/package.json
+++ b/petrocarga/package.json
@@ -28,7 +28,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.544.0",
     "mapbox-gl": "^3.15.0",
-    "next": "15.5.4",
+    "next": "^16.0.7",
     "nookies": "^2.5.2",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
