--- a/petrocarga/package.json
+++ b/petrocarga/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@fullcalendar/daygrid": "^6.1.19",
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
@@ -29,7 +30,6 @@
     "lucide-react": "^0.544.0",
     "mapbox-gl": "^3.15.0",
     "next": "^16.0.7",
-    "next-pwa": "^5.6.0",
     "nookies": "^2.5.2",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
