--- a/petrocarga/package.json
+++ b/petrocarga/package.json
@@ -35,6 +35,7 @@
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "react-map-gl": "^8.0.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
