--- a/petrocarga/package.json
+++ b/petrocarga/package.json
@@ -37,8 +37,10 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-map-gl": "^8.0.4",
+    "recharts": "^3.6.0",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "vlibras-nextjs": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
