--- a/petrocarga/package.json
+++ b/petrocarga/package.json
@@ -19,8 +19,10 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -33,7 +35,7 @@
     "next": "^16.0.7",
     "nookies": "^2.5.2",
     "react": "19.1.0",
-    "react-day-picker": "^9.11.1",
+    "react-day-picker": "^9.13.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-map-gl": "^8.0.4",
