--- a/petrocarga/package.json
+++ b/petrocarga/package.json
@@ -34,6 +34,7 @@
     "mapbox-gl": "^3.15.0",
     "next": "^16.0.7",
     "nookies": "^2.5.2",
+    "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.1.0",
